[gd_scene load_steps=2 format=3 uid="uid://cwvdh3oil1inq"]

[ext_resource type="Script" path="res://scripts/MainHUD.gd" id="1_i0hhi"]

[node name="MainHud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i0hhi")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="DateLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Date"

[node name="EventsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="AdvanceButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Advance"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="MenuContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="SquadButton" type="Button" parent="VBoxContainer/MenuContainer"]
layout_mode = 2
text = "Squad"

[node name="TransfersButton" type="Button" parent="VBoxContainer/MenuContainer"]
layout_mode = 2
text = "Transfers"

[node name="ContractsButton" type="Button" parent="VBoxContainer/MenuContainer"]
layout_mode = 2
text = "Contracts"

[node name="MeetingsButton" type="Button" parent="VBoxContainer/MenuContainer"]
layout_mode = 2

[node name="ProfileButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Director Profile"
